changed favicon added/removed shading

--- a/config.toml
+++ b/config.toml
@@ -176,6 +176,6 @@ medium                = ""
 linkedin              = "zacgarland"
 youtube               = ""
 instagram             = "zac_garland_"
-twitter               = "zac_garland_"
+twitter               = ""
 # Email
-email                 = "zachary.garland@outlook.com"
+email                 = ""
