--- a/config.toml
+++ b/config.toml
@@ -128,9 +128,9 @@ disableLanguages        = [""]
     weight            = 2
 
   [[menu.main]]
-    name              = "Talkin' Data"
+    name              = "Data Science"
     url               = "/blog/"
-    identifier        = "far fa-newspaper"
+    identifier        = "fas fa-code-branch"
     weight            = 3
     
 
