added seo and social links to about me page

--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,8 @@ title                   = "Zac Garland"
 theme = "hugo-future-imperfect-slim"
 preserveTaxonomyNames   = true
 paginate                = 3
+enableRobotsTXT         = true
+canonifyURLs            = true
 disqusShortname         = ""
 googleAnalytics         = ""
 pluralizeListTitles     = false
