--- a/config.toml
+++ b/config.toml
@@ -137,12 +137,18 @@ disableLanguages        = [""]
     identifier        = "fas fa-chart-line"
     weight            = 3
 
+  [[menu.main]]
+    name              = "Philanthropy"
+    url               = "/philanthropy/"
+    identifier        = "fas fa-heart"
+    weight            = 4
+
 
   [[menu.main]]
     name              = "Contact"
     url               = "/contact/"
     identifier        = "far fa-envelope"
-    weight            = 4
+    weight            = 5
 
 [Languages]
   # Each language has its own menu.
