removing header link

--- a/config.toml
+++ b/config.toml
@@ -124,11 +124,11 @@ disableLanguages        = [""]
     identifier        = "fas fa-home"
     weight            = 1
 
-  [[menu.main]]
-    name              = "Data Science"
-    url               = "/blog/"
-    identifier        = "fas fa-code-branch"
-    weight            = 2
+  #[[menu.main]]
+    # name              = "Data Science"
+    #url               = "/blog/"
+    #identifier        = "fas fa-code-branch"
+    #weight            = 2
     
 
   [[menu.main]]
