--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ disqusShortname         = ""
 googleAnalytics         = ""
 pluralizeListTitles     = false
 disableLanguages        = [""]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [params]
   # Loads CSS and JavaScript files. The variable is an array so that you can load
